    * support for emacs/bash-like ctrl-e/a/u/k/h keys in single line text fields
    * support for * and # mappings to search for the text selection or the text under the cursor
    * Escape finally clears any selection made in the document
    * initial start of caret mode. Start with 'i', stop with Escape;
    * many small bug fixes and enhancements

2007-12-21:
    * version 0.5.3
    * IMPORTANT! options are no longer automatically stored - use the
      ~/.vimperatorrc file instead for persistent options
    * :tabnext and :tabprevious now accept an argument
    * the count to gT now specifies a relative tab motion like Vim
    * new :pa[geinfo] command, and ctrl-g and g,ctrl-g mappings (thanks Marco Candrian)
    * added new :mkvimperatorrc command
    * remove :redraw and Ctrl-L commands as they rely on FF3 features
    * :ls, :history and :bmarks output is now hyperlinked
    * new gb and gB mappings to repeat the last :buffer[!] command,
    * :q doesn't close the whole browser, if there are more than one windows
    * new :winclose command
    * b calls :buffer! now instead of :buffer
    * [+], [-] and [+-] in the statusline, whether we can go back, forward, or both
    * :set showtabline now finally works as expected for all values
    * many other small bug fixes

2007-10-11:
    * version 0.5.2
    * changed semantics of :set[!] and :prefs[!] a little, :set shows now all non-default
      options, use :prefs! to get the about:config window
    * added "s" and "a" mappings to extended hints mode for saving hint targets
    * "d", "D" and :bdelete support count now
    * :back/:forward can use tabcompletion
    * :undoall support, and tabcompletion for :undo <tab>
    * new :redraw and Ctrl-L commands for forced redrawing of the screen
    * added new 'laststatus' option and removed "s" value from 'guioptions'
    * Tab-completion improvements for :javascript and :open