@@ -228,7 +228,12 @@ liberator.config = {
 
         liberator.commands.add(["downl[oads]", "dl"],
             "Show progress of current downloads",
-            function () { liberator.open("chrome://mozapps/content/downloads/downloads.xul", liberator.NEW_TAB); });
+            function ()
+            {
+                liberator.open("chrome://mozapps/content/downloads/downloads.xul",
+                    (liberator.options.newtab == "all" || liberator.options.newtab.split(",").indexOf("downloads") != -1) ?
+                        liberator.NEW_TAB : liberator.CURRENT_TAB);
+            });
 
         liberator.commands.add(["o[pen]", "e[dit]"],
             "Open one or more URLs in the current tab",
